[FIX] sap.uxap.ObjectPageHeader: Remove actions redundant "right" style alignment
Background: By design, actions area should have a 1.25rem right alignment only in "Medium Desktop" media.

Problem: Actions area had a 1.25rem right alignment when in "Large Desktop".

Solution: Remove the redundant alignment and leave only the one wrapped with the correct media class.

BCP: 0020751295 0000397149 2020

--- a/src/themelib_sap_belize/src/sap/uxap/themes/sap_belize/ObjectPageHeader.less
+++ b/src/themelib_sap_belize/src/sap/uxap/themes/sap_belize/ObjectPageHeader.less
@@ -39,11 +39,7 @@
 		color: @sapUiContentLabelColor;
 	}
 
-	.sapUxAPObjectPageHeaderIdentifierActions {
-		.sapUxAPObjectPageHeaderStickied & {
-			right: 1.25rem;
-		}
-	}
+
 }
 
 .sapUiSizeCompact .sapUxAPObjectPageHeaderIdentifierContainer /* desktop-specific padding */{
